gccida/g0/draw_edge
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/draw_edge/src/graph.c:639:25: error: use of undeclared identifier 'unk_779750'
color = ( const char *)&unk_779750; 
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/draw_edge/src/obj/graph.o] Error 1
